tests/NormalTests/paczka1/small_fuzzy/80395653.err
Error in line 4: 5ZOQg2qmE A919 26,4
Error in line 5: 5ZOQg2qmE A735 93,6
Error in line 3: uk5 A883 17,7
